submitted/4/sub.log
CE 0ms 0B
main.cpp: In function ‘int main()’:
main.cpp:6:20: error: expected ‘;’ before ‘}’ token
    6 |     cout<<a+b<<endl
      |                    ^
      |                    ;
    7 | }
      | ~                   
